# RealServer

./: CMakeLists.txt  ConvertToUtf8NoBom.ps1  README.md  Server.sln  clean_server  log4cxx.properties  make_server  readme.txt  run_server  stop_server
AllianceServer/: AllianceServer.vcxproj  Makefile  config.xml
AllianceServer/src/: test.cpp
AllianceServerC/: AllianceServerC.vcxproj  AllianceServerC.vcxproj.filters  Makefile
AllianceServerC/src/: test.cpp
Engine/lib/: Engine.exp  Engine.lib  libiconv.exp  libiconv.lib  libxml2.exp  libxml2.lib  log4cxx.lib
Engine/src/: clean  libmake
Engine/win32_sln/: Engine.vcxproj  Engine.vcxproj.filters  copy_to_include.bat
FriendServer/: FriendServer.vcxproj  Makefile
FriendServer/src/: test.cpp
FriendServerC/: FriendServerC.vcxproj  FriendServerC.vcxproj.filters  Makefile  config.xml
FriendServerC/src/: Makefile  test.cpp
GameServer/: GameServer.vcxproj  Makefile
GameServer/src/: test.cpp
LoginServer/: LoginServer.vcxproj  Makefile  config.xml
LoginServer/src/: test.cpp
RegServer/: Makefile  RegServer.vcxproj  log.xml
RegServer/src/: test.cpp
ServerLib/ServerLib/: ServerLib.vcxproj  ServerLib.vcxproj.filters
ServerLib/sql/: act_platform_new.sql  act_user_data_new.sql  config.xml  log.xml  pluglist.xml  qjfml_log.sql
ServerLib/xBase/: makefile  xCmdCrc.h  xDBConnPool.cpp  xDBConnPool.h  xDBMeta.h  xDefine.h  xExecutionTime.cpp  xExecutionTime.h  xFunctionTime.cpp  xFunctionTime.h  xLog.cpp  xLog.h  xPoolBase.h  xSimpleAllocator.h  xSingletonTemplate.h  xStringTool.cpp  xStringTool.h  xSynlock.h  xThread.cpp  xThread.h  xTime.cpp  xTime.h  xTools.cpp  xTools.h  xUniqueIDManager.h  xXMLParser.cpp  xXMLParser.h
ServerLib/xCommand/: LogCmd.h  LoginCmd.h  PressureTestCmd.h  SystemCmd.h  UserCmd.h  makefile  xCommand.h
ServerLib/xConfig/: makefile
ServerLib/xGame/: makefile
ServerLib/xGameData/: makefile
ServerLib/xNet/: makefile  xByteBuffer.cpp  xByteBuffer.h  xNetDefine.h  xNetProcessor.cpp  xNetProcessor.h  xSocket.cpp  xSocket.h
ServerLib/xServer/: ZoneServer.cpp  ZoneServer.h  makefile  xBalanceMgr.cpp  xClient.cpp  xClient.h  xServer.cpp  xServer.h  xTask.cpp
ServerTemplate/AllianceServer/: AllianceServer  AllianceServer.vcxproj  Makefile  config.xml
ServerTemplate/AllianceServerC/: AllianceServerC  AllianceServerC.vcxproj  Makefile
ServerTemplate/FriendServer/: FriendServer  Makefile
ServerTemplate/FriendServerC/: FriendServerC  FriendServerC.vcxproj  Makefile
ServerTemplate/GameServer/: GameServer  GameServer.vcxproj  Makefile
ServerTemplate/LoginServer/: LoginServer.vcxproj  Makefile  config.xml
ServerTemplate/RegServer/: Makefile  RegServer
ServerTemplate/TransferServer/: Makefile  TransferServer
ServerTemplate/WorldServer/: Makefile  WorldServer  config.xml
TransferServer/: Makefile  TransferServer.vcxproj
TransferServer/src/: test.cpp
WorldServer/: Makefile  WorldServer.vcxproj  config.xml
WorldServer/src/: test.cpp
_bin/: config.xml
application/: CMakeLists.txt  GateService.cpp  main.cpp  main.h  nats.cpp
application/actor/: ActorGlobalDefine.h  ActorInterface.h  ActorMgr.h
application/actor/gate/: Gate.cpp  GateClient.cpp  GateClient.h  gate.h
application/actor/gate/Database/: GateDB.cpp  GateTableDefine.h
application/actor/login/: Login.cpp  login.h
application/actor/login/Database/: LoginDB.cpp  LoginTableDefine.h
application/actor/player/: Player.cpp  player.h
application/actor/player/Database/: PlayerDB.cpp  PlayerTableDefine.h
application/handle/gate/: GateMsgHandler.cpp  GateNatsMsgHandler.cpp  GateRpcHandler.cpp  LoginEvent.cpp  PlayerMsgHandler.cpp
application/service/log/: log.h
document/: 服务器关系配置.xlsx  架构图.pptx
document/sql/: act_platform_new.sql  act_user_data_new.sql  qjfml_log.sql
engine/: CMakeLists.txt
engine/xActor/: Actor.cpp  Actor.h  ActorDefine.h  ActorMgr.cpp  ActorMgr.h
engine/xBase/: UTF8.h  xCircularPool.cpp  xDefine.h  xExecutionTime.h  xFileTool.h  xFunctionTime.h  xObjPool.h  xRecordDataDefine.h  xSimpleAllocator.h  xStringTool.h  xSynlock.h  xThread.cpp  xTime.cpp  xTools.h  (+2 more)
source/: CMakeLists.txt
src/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/xBase/: Duration.h  LibraryDef.h  xCircularPool.h  xCmdCrc.h  xDefine.h  xExecutionTime.cpp  xFunctionTime.cpp  xPoolBase.h  xSingleton.h  xSingletonTemplate.h  xStringTool.cpp  xThread.cpp  xThread.h  xTime.h  xTools.cpp  xTools.h  xUniqueIDManager.h
src/engine/xCommand/: PressureTestCmd.h  SystemCmd.h  xCommand.h  xServerRouteDefine.h
src/engine/xDatabase/: RecordData.cpp  RecordDef.h  RecordFun.h  xDBConnPool.cpp
src/engine/xEvent/: xEvent.cpp  xEventDefine.h  xEventDispatcher.h
src/engine/xLog/: xLog.cpp  xLog.h
src/engine/xNats/: xLog.cpp
src/engine/xNet/: GameServerRunShareMgr.cpp  GameServerRunShareMgr.h  SStartConfig.cpp  SStartConfig.h  ServerClient.cpp  ServerClient.h  ServerLoadMgr.cpp  ServerLoadMgr.h  ServerPathTool.h  xByteBuffer.cpp  xByteBuffer.h  xClient.cpp  xClient.h  xCmdQueue.h  xMsgDispatcher.cpp  xMsgDispatcher.h  xNet.cpp  xNetDefine.h  xNetProcessor.cpp  xNetProcessor.h  xSConnectManager.cpp  xSConnectManager.h  xServerDispatcher.cpp  xServerDispatcher.h  xServerMgrDataDef.h  xSocket.cpp  xSocket.h  xTask.cpp  xTask.h
src/engine/xRedis/: RedisMgr.cpp  RedisMgr.h
src/engine/xRpc/: xRpc.cpp  xRpc.h
src/engine/xScheduler/: xScheduler.cpp  xScheduler.h  xSchedulerMgr.cpp  xSchedulerMgr.h  xSchedulerProcess.cpp  xSchedulerProcess.h
src/engine/xService/: xService.cpp  xService.h  xServiceDefine.h  xServiceMgr.cpp  xServiceMgr.h  xSignal.h  xState.h  xStateMachine.h
src/engine/xShareMem/: SMUManager.cpp  SMUManager.h  ShareMemAO.cpp  ShareMemAO.h
src/engine/xWebConsole/: xLog.h
src/service/: CMakeLists.txt
src/service/gate/: CMakeLists.txt  log4cxx.properties
src/service/gate/src/: GateService.cpp  GateService.h  chat_server.cpp  libxml2.cpp  main.cpp
src/service/gate/src/EventHandler/: GateMsgHandler.cpp  PlayerRpcHandler.cpp
third_part/: vcpkg readme.txt
tools/: go.mod  go.sum
(+411 files in other folders)
